# KiwiTalk

./: .babelrc  .editorconfig  .eslintrc.json  .gitignore  .prettierrc  .yarnrc.yml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  buildscript.js  entry.js  index.html  index.ts  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  release.toml  renovate.json  tsconfig.json  vite.config.ts  webpack.config.js
backend/crates/headless-talk/: Cargo.toml  README.md  build.rs  diesel.toml
backend/crates/headless-talk/migrations/2023-10-21-003644_v0.1/: down.sql  up.sql
backend/crates/headless-talk/src/: config.rs  conn.rs  constants.rs  error.rs  initializer.rs  lib.rs  task.rs  user.rs
backend/crates/headless-talk/src/channel/: initializer.rs  list.rs  mod.rs  normal.rs  open.rs  updater.rs  user.rs
backend/crates/headless-talk/src/chat/: mod.rs
backend/crates/headless-talk/src/database/: constants.rs  mod.rs  pool.rs  schema.rs
backend/crates/headless-talk/src/event/: channel.rs  mod.rs
backend/crates/headless-talk/src/handler/: error.rs  mod.rs
backend/crates/headless-talk/src/init/: config.rs  mod.rs
backend/crates/headless-talk/src/initializer/: channel.rs  list.rs  mod.rs
backend/crates/headless-talk/src/updater/: channel.rs  chat.rs  list.rs  mod.rs
backend/crates/talk-api-client/: Cargo.toml  README.md
backend/crates/talk-api-client/examples/: auth.rs
backend/crates/talk-api-client/src/: lib.rs
backend/crates/talk-api-client/src/auth/: mod.rs
backend/crates/talk-api-internal/: Cargo.toml  README.md
backend/crates/talk-api-internal/examples/: auth.rs
backend/crates/talk-api-internal/src/: account.rs  agent.rs  client.rs  config.rs  credential.rs  friend.rs  lib.rs  profile.rs  response.rs
backend/crates/talk-api-internal/src/auth/: client.rs  login.rs  mod.rs  resources.rs
backend/crates/talk-api-internal/src/profile/: mod.rs
crates/: Cargo.toml
crates/kiwi-talk-app/: Cargo.toml  tauri.conf.json
crates/kiwi-talk-app/src/: auth.rs  constants.rs  credential.rs  device.rs  error.rs  main.rs  result.rs  system.rs
crates/kiwi-talk-app/src/app/: client.rs  configuration.rs  conn.rs  constants.rs  handler.rs  mod.rs  stream.rs
crates/kiwi-talk-app/src/app/configuration/: auth.rs  global.rs  locale.rs  mod.rs
crates/kiwi-talk-app/src/auth/: constants.rs  mod.rs
crates/kiwi-talk-app/src/client/: channel_list.rs  conn.rs  credential.rs  event.rs  handler.rs  mod.rs  saved_account.rs
crates/kiwi-talk-app/src/configuration/: auth.rs  global.rs  mod.rs
crates/kiwi-talk-client/: Cargo.toml  README.md
crates/kiwi-talk-client/src/: channel.rs  config.rs  conn.rs  constants.rs  database.rs  error.rs  event.rs  handler.rs  initializer.rs  lib.rs  loco_public_key.pub  status.rs
crates/kiwi-talk-client/src/channel/: loader.rs  mod.rs  normal.rs  updater.rs  user.rs
crates/kiwi-talk-client/src/channel/normal/: mod.rs  user.rs
crates/kiwi-talk-client/src/chat/: builder.rs  mod.rs
crates/kiwi-talk-client/src/client/: mod.rs
crates/kiwi-talk-client/src/database/: chat.rs  conversion.rs  mod.rs  pool.rs
crates/kiwi-talk-client/src/database/channel/: mod.rs  model.rs  updater.rs  user.rs
crates/kiwi-talk-client/src/database/chat/: mod.rs  model.rs
crates/kiwi-talk-client/src/database/migrations/: v0.1.0.sql
crates/kiwi-talk-client/src/event/: channel.rs  error.rs  mod.rs
crates/kiwi-talk-client/src/handler/: command.rs  error.rs  mod.rs
crates/kiwi-talk-client/src/initializer/: channel.rs  mod.rs
crates/kiwi-talk-client/src/user/: mod.rs
crates/kiwi-talk-db/: Cargo.toml  README.md
crates/kiwi-talk-db/src/: lib.rs  model.rs
crates/kiwi-talk-db/src/channel/: mod.rs  model.rs
crates/kiwi-talk-db/src/channel/migrations/: 20220924_channel.sql  202210050951_channel.sql
crates/kiwi-talk-db/src/channel/normal/: mod.rs  model.rs
crates/kiwi-talk-db/src/channel/open/: model.rs
crates/kiwi-talk-db/src/chat/: mod.rs  model.rs
crates/kiwi-talk-db/src/migrations/: 202210120952_db.sql  202210151608_db.sql  202301182212_db.sql
crates/kiwi-talk-db/src/user/: mod.rs
crates/kiwi-talk-db/src/user/migrations/: 202210050951_user.sql
crates/kiwi-talk-db/tests/: channel.rs  database.rs
crates/talk-api-client/: Cargo.toml
crates/talk-api-client/examples/: auth.rs
crates/talk-api-client/src/: agent.rs  lib.rs
crates/talk-api-client/src/auth/: mod.rs  resources.rs  status.rs
crates/talk-api-client/src/auth/xvc/: default.rs  mod.rs
crates/talk-auth-client/src/: agent.rs  credential.rs  response.rs
crates/talk-auth-client/src/auth/: resources.rs
crates/talk-auth-client/src/auth/xvc/: default.rs
crates/talk-loco-client/: Cargo.toml
crates/talk-loco-client/examples/: booking.rs  checkin.rs
crates/talk-loco-client/src/: command.rs  lib.rs  secure.rs  session.rs
crates/talk-loco-client/src/client/: booking.rs  checkin.rs  mod.rs  talk.rs
crates/talk-loco-client/src/client/media/: io.rs  mod.rs
crates/talk-loco-client/src/macros/: __private.rs  mod.rs
crates/talk-loco-client/src/structs/: channel_info.rs  chat.rs  mod.rs  openlink.rs  user.rs
crates/talk-loco-client/src/talk/: channel_info.rs  chat_on_channel.rs  load_channel_list.rs  login.rs  mod.rs  write.rs
crates/talk-loco-client/src/talk/session/: login.rs  mod.rs
crates/talk-loco-client/src/talk/stream/: command.rs  mod.rs
crates/talk-loco-command/: Cargo.toml  README.md
crates/talk-loco-command/src/: lib.rs
crates/talk-loco-command/src/command/: codec.rs  mod.rs
crates/talk-loco-command/src/request/: mod.rs  ping.rs
crates/talk-loco-command/src/request/booking/: get_conf.rs  mod.rs
crates/talk-loco-command/src/request/chat/: chat_info.rs  chat_on_room.rs  delete_msg.rs  forward.rs  get_mem.rs  get_trailer.rs  l_chat_list.rs  leave.rs  login_list.rs  member.rs  mod.rs  noti_read.rs  (+5 more)
crates/talk-loco-command/src/response/: mod.rs
crates/talk-loco-command/src/structs/: channel_info.rs  chat.rs  client.rs  connection.rs  mod.rs  openlink.rs  user.rs
src-tauri/: Cargo.toml  tauri.conf.json
(+794 files in other folders)
