[workspace]
resolver = "2"

members = ["./backend/bin/*", "./backend/crates/*"]

[workspace.package]
version = "0.1.0"
license = "Apache-2.0"
authors = ["KiwiTalk contributors"]
edition = "2021"
repository = "https://github.com/KiwiTalk/KiwiTalk"

[workspace.dependencies]
kiwi-talk-client = { version = "0.1.0", path = "./backend/crates/kiwi-talk-client" }
talk-api-client = { version = "0.1.0", path = "./backend/crates/talk-api-client" }
talk-loco-client = { version = "0.1.0", path = "./backend/crates/talk-loco-client" }
