[workspace]
resolver = "2"

members = ["./backend/bin/*", "./backend/crates/*"]

[workspace.package]
version = "0.1.2"
license = "Apache-2.0"
authors = ["KiwiTalk contributors"]
edition = "2021"
repository = "https://github.com/KiwiTalk/KiwiTalk"
rust-version = "1.57"

[workspace.dependencies]
tokio = "1"
tauri = "1.5.1"
log = "0.4.20"
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }

[workspace.dependencies.kiwi-talk-client]
version = "0.2.0"
path = "./backend/crates/kiwi-talk-client"

[workspace.dependencies.talk-api-internal]
version = "0.2.0"
path = "./backend/crates/talk-api-internal"

[workspace.dependencies.talk-loco-client]
version = "0.2.0"
path = "./backend/crates/talk-loco-client"
