[workspace]
resolver = "2"

members = [
    "kiwi-talk-app",

    "kiwi-talk-client",

    "talk-api-client",
    "talk-loco-client",
]

[workspace.package]
version = "0.1.0"
license = "Apache-2.0"
authors = ["KiwiTalk contributors"]
edition = "2021"
repository = "https://github.com/KiwiTalk/KiwiTalk"

[workspace.dependencies]
kiwi-talk-client = { path = "./kiwi-talk-client" }
talk-api-client = { path = "./talk-api-client" }
talk-loco-client = { path = "./talk-loco-client" }

