[package]
name = "kiwi-talk-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["KiwiTalk contributors"]
license = "Apache-2.0"
repository = "https://github.com/KiwiTalk/kiwitalk"
edition = "2021"
rust-version = "1.57"
default-run = "kiwi-talk-app"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.1", features = ["api-all", "system-tray"] }
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-util = { version = "0.7.8", features = ["compat"] }
thiserror = "1.0"
once_cell = "1.18.0"
loco-protocol = "5.4.0"
hostname = "0.3.1"
sys-locale = "0.3.1"
rand = "0.8.5"
base64 = "0.21.4"
log = "0.4.20"
env_logger = "0.10.0"
parking_lot = "0.12.1"
futures = "0.3.28"
nohash-hasher = "0.2.0"
window-shadows = "0.2.1"

kiwi-talk-client = { path = "../kiwi-talk-client" }
talk-api-client = { path = "../talk-api-client" }
talk-loco-client = { path = "../talk-loco-client" }
talk-loco-command = { path = "../talk-loco-command" }

[features]
default = []
custom-protocol = [ "tauri/custom-protocol" ]
