[package]
name = "kiwi-talk-app"
description = "A Tauri App"
rust-version = "1.57"
default-run = "kiwi-talk-app"

version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
kiwi-talk-client = { workspace = true }
talk-api-client = { workspace = true }
talk-loco-client = { workspace = true }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.1", features = ["api-all", "system-tray"] }
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-util = { version = "0.7.9", features = ["compat"] }
thiserror = "1.0"
once_cell = "1.18.0"
hostname = "0.3.1"
sys-locale = "0.3.1"
rand = "0.8.5"
base64 = "0.21.4"
log = "0.4.20"
env_logger = "0.10.0"
parking_lot = "0.12.1"
futures = "0.3.28"
nohash-hasher = "0.2.0"
window-shadows = "0.2.1"
num-bigint-dig = "0.8.4"
anyhow = "1.0.75"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
bincode = "1.3.3"
enum-kinds = "0.5.1"
sha2 = "0.10.8"
serde-byte-array = "0.1.2"
hex = "0.4.3"

[features]
default = []
custom-protocol = [ "tauri/custom-protocol" ]
