[package]
name = "kiwi-talk-client"
version = "0.1.0"
authors = ["KiwiTalk contributors"]
license = "Apache-2.0"
repository = "https://github.com/KiwiTalk/kiwitalk"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
futures = "0.3.25"
bson = "2.5.0"
log = "0.4.17"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
dashmap = "5.4.0"

talk-loco-client = { path = "../talk-loco-client" }
talk-loco-command = { path = "../talk-loco-command" }
kiwi-talk-db = { path = "../kiwi-talk-db" }