[package]
name = "kiwi-talk-client"
version = "0.1.0"
authors = ["KiwiTalk contributors"]
license = "Apache-2.0"
repository = "https://github.com/KiwiTalk/kiwitalk"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
futures = "0.3.28"
bson = "2.6.1"
log = "0.4.19"
nohash-hasher = "0.2.0"
smallvec = { version = "1.11.0", features = ["serde", "const_generics"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
rusqlite_migration = "1.0.2"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
once_cell = "1.18.0"
extend = "1.2.0"

talk-loco-client = { path = "../talk-loco-client" }
talk-loco-command = { path = "../talk-loco-command" }
