[package]
name = "talk-api-client"
version = "0.1.0"
edition = "2021"
categories = [ "api-bindings" ]
authors = ["KiwiTalk contributors"]
license = "Apache-2.0"

[dependencies]
reqwest = { version = "0.11.14", features = ["json"] }
sha2 = "0.10.6"
hex = "0.4.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_with = "2.2.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.24.2", features = ["full"] }