[package]
name = "talk-api-client"
version = "0.1.0"
edition = "2021"
categories = [ "api-bindings" ]
authors = ["KiwiTalk contributors"]
license = "Apache-2.0"

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
sha2 = "0.10.7"
hex = "0.4.3"
serde = { version = "1.0.166", features = ["derive"] }
serde_with = "3.0.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }