[package]
name = "talk-loco-client"
version = "0.1.0"
license = "Apache-2.0"
keywords = ["talk", "loco"]
readme = "README.md"
description = "Loco client"
authors = ["KiwiTalk contributors"]
edition = "2021"

[dependencies]
serde = { version = "1.0" }
tokio = { version = "1", features = ["rt", "net", "sync"] }
futures = "0.3.28"
bson = "2.7.0"
nohash-hasher = "0.2.0"
talk-loco-command = { path = "../talk-loco-command" }
loco-protocol = "6.2.0"
thiserror = "1.0"
async-stream = "0.3.5"
parking_lot = "0.12.1"
ring-channel = "0.11.0"

[dev-dependencies]
tokio-native-tls = "0.3.1"
tokio-util = { version = "0.7.8", features = ["compat"] }
tokio = { version = "1", features = ["full"] }
