[package]
name = "talk-loco-client"
keywords = ["talk", "loco"]
readme = "README.md"
description = "Loco client"

version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[features]
wasm = ["futures-loco-protocol/wasm"]

[dependencies]
serde = { version = "1.0" }
serde_with = "3.3.0"
bson = "2.7.0"
futures-loco-protocol = "0.2.0"
thiserror = "1.0"
async-stream = "0.3.5"
parking_lot = "0.12.1"
pin-project-lite = "0.2.13"
futures-lite = "1.13.0"
structstruck = "0.4.1"
bitflags = { version = "2.4.0", features = ["serde"] }
num-bigint-dig = "0.8.4"
serde-byte-array = "0.1.2"

[dev-dependencies]
tokio-native-tls = "0.3.1"
tokio-util = { version = "0.7.9", features = ["compat"] }
tokio = { version = "1", features = ["full"] }
