[package]
name = "talk-loco-command"
version = "0.1.0"
license = "Apache-2.0"
keywords = ["talk", "loco"]
readme = "README.md"
description = "Loco command sets"
authors = ["KiwiTalk contributors"]
edition = "2021"

[features]
wasm = ["loco-protocol/wasm"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = "2.0.1"
serde_bytes = "0.11.7"
futures = "0.3.25"
bson = "2.4.0"
loco-protocol = "5.3.1"
thiserror = "1.0"
