[package]
name = "talk-loco-command"
version = "0.1.0"
license = "Apache-2.0"
keywords = ["talk", "loco"]
readme = "README.md"
description = "Loco command sets"
authors = ["KiwiTalk contributors"]
edition = "2021"

[features]
wasm = ["loco-protocol/wasm"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.2.0"
serde_bytes = "0.11.9"
futures = "0.3.28"
bson = "2.6.1"
loco-protocol = "5.4.0"
thiserror = "1.0"
