[package]
name = "headless-talk"
description = "Headless talk implementation"
version = "0.6.1"

license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
talk-loco-client = { workspace = true }

tokio = { version = "1", features = ["rt", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
futures = "0.3.30"
bson = "2.9.0"
log = "0.4.20"
nohash-hasher = "0.2.0"
diesel = { version = "2.1.4", features = ["sqlite", "r2d2", "serde_json"] }
diesel_migrations = "2.1.0"
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
r2d2 = "0.8.10"
once_cell = "1.19.0"
extend = "1.2.0"
serde_json = "1.0.113"
futures-loco-protocol = "0.4.0"
