[package]
name = "talk-api-client"
description = "Various web API for KiwiTalk"
categories = [ "api-bindings" ]
version = "0.2.0"

license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
sha2 = "0.10.8"
hex = "0.4.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_with = "3.3.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }
