[package]
name = "talk-api-internal"
description = "Various internal API for KiwiTalk"
categories = ["api-bindings"]
version = "0.1.0"

license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
reqwest = "0.11.22"
sha2 = "0.10.8"
hex = "0.4.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.3.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }
