[package]
name = "talk-api-internal"
description = "Various internal API for KiwiTalk"
categories = ["api-bindings"]
version = "0.4.1"

license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
reqwest = "0.12.4"
url = "2.5.0"
sha2 = "0.10.8"
hex = "0.4.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.6.1"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"] }
